--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
   font-size: 2rem;
   padding: 12px;
   position: relative;
+  overflow: hidden;
 
   /* top: 5px; */
   left: 10px;
@@ -73,6 +74,7 @@
   justify-content: space-between;
   /* align-items: center; */
   background-image: linear-gradient(to right, red, white);
+  overflow: hidden;
 }
 
 @keyframes first-container {
@@ -149,7 +151,7 @@
   /* background-color: aqua; */
   height: 25vh;
   width: 33vh;
-  margin-right: 12px;
+  margin-left: 12px;
 
   display: flex;
 
@@ -157,6 +159,7 @@
   justify-content: center;
   font-size: 10rem;
   align-items: center;
+  overflow: hidden;
 
   /* left: 10px; */
   position: relative;
@@ -167,16 +170,16 @@
 @keyframes to-right {
   0% {
     color: white;
-    left: 100px;
+    left: 10px;
   }
 
   50% {
     color: red;
-    left: 1000px;
+    left: 300px;
   }
 
   100% {
-    left: 100px;
+    left: 10px;
     color: rgb(19, 3, 3);
   }
 }
