--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .navbar-items {
   display: flex;
   /* justify-content: space-around; */
@@ -34,38 +38,38 @@
   font-size: 2rem;
   padding: 12px;
   position: relative;
-  overflow: hidden;
 
   /* top: 5px; */
   left: 10px;
 
   animation: discount-bar infinite 5s linear;
+  animation-fill-mode: ease-out;
 }
 
 @keyframes discount-bar {
   0% {
     color: black;
-    left: 10px;
+    left: 0vw;
   }
 
   25% {
     color: rgb(12, 236, 12);
-    left: 300px;
+    left: 30vw;
   }
 
   50% {
     color: blue;
-    left: 600px;
+    left: 60vw;
   }
 
   75% {
     color: red;
-    left: 1000px;
+    left: 90vw;
   }
 
   100% {
     color: rgb(235, 10, 205);
-    left: 10px;
+    left: 0vw;
   }
 }
 
